更新逻辑删除案例

--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <modules>
         <module>mpsl-enum</module>
         <module>mpsl-page</module>
-        <module>mpsl-logicaldelete</module>
+        <module>mpsl-logicaldeleted</module>
     </modules>
 
     <properties>
