逻辑删除案例-CRUD操作

--- a/mpsl-logicaldeleted/src/main/resources/application.yml
+++ b/mpsl-logicaldeleted/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   datasource:
     username: root
     password: onepiece1996
-    url: jdbc:mysql://localhost:3306/mybatispuls?useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/mybatislearn?useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
     driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.zaxxer.hikari.HikariDataSource
     hikari:
