--- a/mpsl-logicaldeleted/src/main/resources/application.yml
+++ b/mpsl-logicaldeleted/src/main/resources/application.yml
@@ -1,13 +1,13 @@
-#\u7AEF\u53E3
+#端口
 server:
   port: 8783
 
-#\u6570\u636E\u5E93\u914D\u7F6E
+#数据库配置
 spring:
   datasource:
     username: root
     password: onepiece1996
-    url: jdbc:mysql://localhost:3306/mybatislearn?useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/mybatispuls?useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
     driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.zaxxer.hikari.HikariDataSource
     hikari:
@@ -25,12 +25,13 @@ spring:
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  #全局设置
   global-config:
     db-config:
-      id-type: id_worker_str # \u4E3B\u952E\u81EA\u52A8\u751F\u6210\u7B56\u7565
-      # \u903B\u8F91\u5220\u9664\u6807\u8BC6\u5168\u5C40\u8BBE\u5B9A
-      logic-delete-value: D # \u9ED8\u8BA4\u4E3A 1
-      logic-not-delete-value: A # \u9ED8\u8BA4\u4E3A 0
+      id-type: id_worker_str #主键生成策略
+      #逻辑删除
+      logic-delete-value: D #默认 1
+      logic-not-delete-value: A #默认 0
       table-prefix: xx_
       # table-underline: true
 
