--- a/mpsl-logicaldeleted/src/main/resources/application.yml
+++ b/mpsl-logicaldeleted/src/main/resources/application.yml
@@ -6,7 +6,7 @@ server:
 spring:
   datasource:
     username: root
-    password: onepiece1996
+    password: ???
     url: jdbc:mysql://localhost:3306/mybatispuls?useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
     driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.zaxxer.hikari.HikariDataSource
