--- a/mpsl-auto-fill-metainfo/src/main/resources/application.yml
+++ b/mpsl-auto-fill-metainfo/src/main/resources/application.yml
@@ -4,8 +4,8 @@ server:
 spring:
   datasource:
     username: root
-    password: ???
-    url: jdbc:mysql://localhost:3306/mybatislearn?useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+    password: onepiece1996
+    url: jdbc:mysql://localhost:3306/mybatispuls?useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
     driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.zaxxer.hikari.HikariDataSource
     hikari:
