--- a/mpsl-auto-fill-metainfo/src/main/resources/application.yml
+++ b/mpsl-auto-fill-metainfo/src/main/resources/application.yml
@@ -1,12 +1,10 @@
-#端口
 server:
-  port: 8783
+  port: 8781
 
-#数据库配置
 spring:
   datasource:
     username: root
-    password: ???
+    password: onepiece1996
     url: jdbc:mysql://localhost:3306/mybatispuls?useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
     driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.zaxxer.hikari.HikariDataSource
@@ -25,17 +23,17 @@ spring:
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-  #全局设置
   global-config:
     db-config:
-      id-type: id_worker_str #主键生成策略
-      #逻辑删除
-      logic-delete-value: D #默认 1
-      logic-not-delete-value: A #默认 0
+      id-type: id_worker_str
+      logic-delete-value: D
+      logic-not-delete-value: A
       table-prefix: xx_
       # table-underline: true
 
 logging:
   level:
     com.streamslience.simples.deleted.mpsllogicaldeleted: trace
+
+
 
