--- a/mpsl-typehandler/src/main/resources/application.yml
+++ b/mpsl-typehandler/src/main/resources/application.yml
@@ -1,41 +1,38 @@
 #端口
 server:
-  port: 8783
+  port: 8782
 
 #数据库配置
 spring:
   datasource:
     username: root
-    password: ???
     url: jdbc:mysql://localhost:3306/mybatispuls?useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+    password: ???
     driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.zaxxer.hikari.HikariDataSource
     hikari:
-      pool-name: Hikaric
+      pool-name: Hikari
       minimum-idle: 10
       maximum-pool-size: 20
       auto-commit: true
       idle-timeout: 12000
       max-lifetime: 30000
       connection-timeout: 10000
-      connection-init-sql: set names utf8mb4
+      connection-init-sql:  set names utf8mb4
       connection-test-query: select 1
       read-only: false
 
+
 mybatis-plus:
-  configuration:
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-  #全局设置
   global-config:
     db-config:
-      id-type: id_worker_str #主键生成策略
-      #逻辑删除
-      logic-delete-value: D #默认 1
-      logic-not-delete-value: A #默认 0
+      logic-delete-value: D
+      logic-not-delete-value: A
+      column-format: true
       table-prefix: xx_
-      # table-underline: true
+
+
 
 logging:
   level:
-    com.streamslience.simples.deleted.mpsllogicaldeleted: trace
-
+    com.streamslience.simples.typehandler.mpsltypehandler: trace
