新增攻击SQL阻断解析器案例

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>mpsl-logicaldeleted</module>
         <module>mpsl-typehandler</module>
         <module>mpsl-auto-fill-metainfo</module>
+        <module>mpsl-sql-parser</module>
     </modules>
 
     <properties>
