--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>mpsl-typehandler</module>
         <module>mpsl-auto-fill-metainfo</module>
         <module>mpsl-sql-parser</module>
+        <module>mpsl-crud</module>
     </modules>
 
     <properties>
@@ -56,7 +57,7 @@
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
-            <version>3.2.0</version>
+            <version>3.1.0</version>
         </dependency>
         <!--swagger2-->
         <dependency>
@@ -88,7 +89,11 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <scope>runtime</scope>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
         </dependency>
     </dependencies>
 
