--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>mpsl-crud</module>
         <module>mpsl-optimistic-locker</module>
         <module>mpsl-dynamic-datasource</module>
+        <module>mpsl-tenant</module>
     </modules>
 
     <properties>
