新增代码自动生成案例, 模版引擎待写完

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>mpsl-optimistic-locker</module>
         <module>mpsl-dynamic-datasource</module>
         <module>mpsl-tenant</module>
+        <module>mpsl-generator</module>
     </modules>
 
     <properties>
